2024-05-26 Konstantin Kushnir <chpock@gmail.com>
	* Add tests for writer
	* Fix build without c-pages, but with c-fsindex

2024-05-25 Konstantin Kushnir <chpock@gmail.com>
	* Add support for writer in C

2024-05-21 Konstantin Kushnir <chpock@gmail.com>
	* Add support for vfs in C
	* Make the writer object available for C functions
	* Make the ::cookfs::Unmount command preferred over vfs::unmount
	* Make the ::cookfs::Unmount command accept both fsid and mount point
	* Update 7z lib (xz/lzma2 support) from 23.01 to 24.05
	* Fix compiler warnings in --enable-internal-debug mode
	* Add a presentation from the original authors
	* Add multiple configurations to github workflows
	* Fix clang compiler warnings

2024-05-18 Konstantin Kushnir <chpock@gmail.com>
	* Provide successful operation when tcl files unavailable. CookFS should
	work when readerchannel.tcl memchan.tcl pages.tcl fsindex.tcl unavailable,
	but C module contains all required functionality.
	* Return Tcl error from writer when closing a channel
	* Refactor internal names for procedures/objects

2024-05-17 Konstantin Kushnir <chpock@gmail.com>
	* Add support for c-writerchannel. This removes the dependency on vfs::memchan and improves memory utilization/performance

2024-05-15 Konstantin Kushnir <chpock@gmail.com>
	* Refactor Tcl/C code
	* Add support for changecount subcommand for fsindex
	* Add support for import subcommand for fsindex (undocumented)

2024-05-10 Konstantin Kushnir <chpock@gmail.com>
	* Make pkgconfig.tcl file optional, implement it in C

2024-05-06 Konstantin Kushnir <chpock@gmail.com>
	* Bumped version to 1.6.0
	* Fix undefined behaviour

2024-05-05 Konstantin Kushnir <chpock@gmail.com>
	* RELEASE TAG 1.5.0

2024-05-04 Konstantin Kushnir <chpock@gmail.com>
	* Fix build error when c-pages is disabled
	* Use crc32 hash in tcl-pages by default. This removes the mandatory md5 package requirement.